--- a/CMPG223 Project/App.config
+++ b/CMPG223 Project/App.config
@@ -1,7 +1,7 @@
 ﻿<configuration>
 	<connectionStrings>
 		<add name="MyDatabaseConnectionString"
-             connectionString="Data Source=LAPTOP-JHPD709J;Initial Catalog=&quot;Roadrunner Rentals&quot;;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+             connectionString="Data Source=MOMO;Initial Catalog=&quot;Roadrunner Rentals&quot;;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
              providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
